# PY_RBAC

./: .gitignore  README.md  RUOYI_FASTAPI_MIGRATION_STATUS.md  start-ruoyi-fastapi-dev.ps1
ruoyi-fastapi-backend/: .env.example  MIGRATION_PLAN.md  README.md  alembic.ini  pyproject.toml
ruoyi-fastapi-backend/app/: main.py  models.py  seed.py
ruoyi-fastapi-backend/app/api/: deps.py  router.py
ruoyi-fastapi-backend/app/api/routes/: auth.py  captcha.py  system.py
ruoyi-fastapi-backend/app/api/routes/system/: __init__.py  common.py  config.py  dept.py  dict.py  log.py  menu.py  post.py  role.py  user.py
ruoyi-fastapi-backend/app/core/: config.py  operlog.py  response.py  security.py
ruoyi-fastapi-backend/app/db/: session.py
ruoyi-fastapi-backend/app/models/: __init__.py  base.py  config.py  dept.py  dict.py  log.py  menu.py  post.py  role.py  user.py
ruoyi-fastapi-backend/app/services/: cache.py  rbac.py
ruoyi-fastapi-backend/migrations/: env.py  script.py.mako
ruoyi-fastapi-backend/migrations/versions/: 0001_initial.py
ruoyi-fastapi-backend/sql/: init_postgres.sql  sync_ruoyi_dict_postgres.sql
ruoyi-next-admin/: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
ruoyi-next-admin/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
ruoyi-next-admin/app/monitor/logininfor/: page.tsx
ruoyi-next-admin/app/monitor/operlog/: page.tsx
ruoyi-next-admin/app/profile/: page.tsx
ruoyi-next-admin/app/shared/: api.ts  auth.tsx  dict.tsx  types.ts  utils.tsx
ruoyi-next-admin/app/shared/components/: dept-tree.tsx  dict-tag.tsx  modal.tsx  (+12 more)
(+9 files in other folders)
